[tool.poetry]
name = "digital_reporter"
version = "0.1.0"
description = ""
authors = ["IF Else <ifelse@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6"
requests = "^2.23.0"
feedparser = "^5.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
